# sony-ebook-library-revival

./: .gitattributes  .prettierrc.json  AGENTS.md  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: release-notes.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  pages.yml  release.yml
scripts/: capture-app-screenshots.mjs  generate-macos-icons.sh
src/: main.ts  main.tsx  styles.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  platform.rs  platform_linux.rs  platform_macos.rs  platform_windows.rs
src/app/: DesktopApp.test.tsx  DesktopApp.tsx  helpers.tsx
src/app/components/: ContentList.tsx  DetailItem.tsx  DetailsDrawer.tsx  DeviceBanner.tsx  DisconnectedState.tsx  NavSidebar.tsx  Topbar.tsx
src/site/: Website.tsx
