[package]
name = "sony-ebook-library-revival"
version = "0.1.0"
description = "Modern Sony eBook Library remake"
authors = ["James Dumitru"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
plist = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
