[package]
name = "sony-ebook-library-revival"
version = "0.1.0"
description = "Modern Sony eBook Library remake"
authors = ["James Dumitru"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-drag = "2.1.0"
tauri-plugin-opener = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

# macOS-only: diskutil output is Apple plist
[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"

# Windows-only: Win32 volume enumeration
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
